update index.html -> edit metatah view port
add to meta viewport -> , maximum-scale=1.0

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta name="apple-mobile-web-app-title" content="PWA">
 		<meta name="msapplication-TileImage" content="icon/instagram_128.png">
 		<meta name="msapplication-TileColor" content="#000">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0", maximum-scale=1.0>
 		<link rel="stylesheet" href="./style.css">
 		<link rel="manifest" href="./manifest.json">
 		<link rel="shortcut icon" type="image/x-icon" href="icon/todo_64.png">
